# walkrs

./: .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  README.md  async_iter.mjs  eslint.config.mjs  main.mjs  mise.toml  package.json  pnpm-lock.yaml  release-please-config.json  rustfmt.toml  stream.mjs  tsconfig.json
.github/workflows/: benchmark.yml  lint-format.yml  publish.yml  release-please.yml  test.yml
bench/: README.md  bench.ts  constants.ts  setup.ts
example/: main.ts
lib/: index.d.ts  index.js
src/: async_iter.rs  batch_sender.rs  extension_filter.rs  lib.rs  stream.rs
test/: vitest.config.mjs  walk.spec.ts
types/: index.d.ts
