[package]
name = "walkrs"
version = "0.0.1"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "2", features = ["async"] }
napi-derive = "2"
tokio = { version = "1", features = ["full"] }
ignore = "0.4"
globset = "0.4"
num_cpus = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"

[build-dependencies]
built = { version = "0.7", features = ["chrono"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
