[package]
name = "walkrs"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "3.8.3", features = ["async"] }
napi-derive = "3.5.2"
tokio = { version = "1", features = ["full"] }
ignore = "0.4"
globset = "0.4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[build-dependencies]
napi-build = "2.3.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
